--- a/template/search/edit-verse.html
+++ b/template/search/edit-verse.html
@@ -1,4 +1,4 @@
-<ion-view title="edit-verse" id="page5" class=" ">
+<ion-view title="Edit {{vm.bookId}} {{vm.chapId}} {{vm.verse}}" id="page5" class=" " ng-controller="editVerseCtrl as vm">
     <ion-content padding="true" class="has-header">
         <form id="editVerse-form2" class="list ">
             <ion-toggle toggle-class="toggle-positive" id="editVerse-toggle1" class=" ">Like/Unlike</ion-toggle>
@@ -11,7 +11,7 @@
                 </select>
             </label>
         </form>
-        <a ui-sref="menu.verseDetail" id="editVerse-button7" class=" button button-positive  button-block ">Save</a>
-        <a ui-sref="menu.verseDetail" id="editVerse-button9" class=" button button-positive  button-block ">Cancel</a>
+        <a ng-click="vm.saveVerse()" id="editVerse-button7" class=" button button-positive  button-block ">Save</a>
+        <a ui-sref="menu.verseDetail({book:vm.bookId, chap:vm.chapId, verse:vm.verse})" id="editVerse-button9" class=" button button-positive  button-block ">Cancel</a>
     </ion-content>
 </ion-view>
