--- a/template/categories/categories.html
+++ b/template/categories/categories.html
@@ -1,17 +1,21 @@
-<ion-view title="categories" id="page3" class=" ">
+<ion-view title="categories" id="page3" class=" " ng-controller="categoriesCtrl as vm">
+    <ion-nav-buttons side="right">
+    <button class="button" ui-sref="menu.editCategory">
+        <i class="icon ion-edit"></i>
+    </button>
+      <button class="button" ui-sref="menu.addCategory">
+        <i class="icon ion-plus-round"></i>
+      </button>
+    </ion-nav-buttons>
     <ion-content padding="true" class="has-header">
+        <!--
         <div id="categories-button-bar1" class=" button-bar ">
             <a ui-sref="menu.addCategory" id="categories-button17" class=" button button-positive  button-block ">Add</a>
             <a ui-sref="menu.editCategory" id="categories-button19" class=" button button-positive  button-block ">Edit</a>
         </div>
-        <ion-list id="categories-list4" class=" ">
-            <ion-item class="item-icon-right  " id="categories-list-item13" ui-sref="menu.categoryDetail">Jesus
-                <i class="icon ion-android-arrow-forward"></i>
-            </ion-item>
-            <ion-item class="item-icon-right  " id="categories-list-item14" ui-sref="menu.categoryDetail">Paul
-                <i class="icon ion-android-arrow-forward"></i>
-            </ion-item>
-            <ion-item class="item-icon-right  " id="categories-list-item15" ui-sref="menu.categoryDetail">John
+        -->
+        <ion-list id="categories-list4" class=" " ng-init="vm.getCategories()">
+            <ion-item ng-repeat="cat in vm.categories" class="item-icon-right  " id="categories-list-item13" ui-sref="menu.categoryDetail({categoryId:cat})">{{cat}}
                 <i class="icon ion-android-arrow-forward"></i>
             </ion-item>
         </ion-list>
