init book index feature

--- a/template/categories/categories.html
+++ b/template/categories/categories.html
@@ -1,11 +1,11 @@
 <ion-view title="categories" id="page3" class=" " ng-controller="categoriesCtrl as vm">
-    <ion-nav-buttons side="right">
-    <button class="button" ui-sref="menu.editCategory">
+    <ion-nav-buttons side="right" class="buttons">
+    <a class="button button-medium" ui-sref="menu.editCategory">
         <i class="icon ion-edit"></i>
-    </button>
-      <button class="button" ui-sref="menu.addCategory">
-        <i class="icon ion-plus-round"></i>
-      </button>
+    </a>
+      <a class="button button-medium"ui-sref="menu.addCategory">
+        <i  class="icon ion-plus-round"></i>
+      </a>
     </ion-nav-buttons>
     <ion-content padding="true" class="has-header">
         <!--
