--- a/template/menu.html
+++ b/template/menu.html
@@ -14,13 +14,16 @@
         </ion-header-bar>
         <ion-content padding="false" class="side-menu-left has-header">
             <ion-list id="menu-list3" class=" ">
-                <ion-item class="item-icon-right  " id="menu-list-item4" ui-sref="menu.search" menu-close="">Search
+                <ion-item class="item-icon-right  " id="menu-list-item1" ui-sref="menu.bookIndex" menu-close="">Index
+                    <i class="icon ion-home"></i>
+                </ion-item>
+                <ion-item class="item-icon-right  " id="menu-list-item2" ui-sref="menu.search" menu-close="">Search
                     <i class="icon ion-search"></i>
                 </ion-item>
-                <ion-item class="item-icon-right  " id="menu-list-item1" ui-sref="menu.favorites" menu-close="">Favorites
+                <ion-item class="item-icon-right  " id="menu-list-item2" ui-sref="menu.favorites" menu-close="">Favorites
                     <i class="icon ion-android-star-outline"></i>
                 </ion-item>
-                <ion-item class="item-icon-right  " id="menu-list-item3" ui-sref="menu.categories" menu-close="">Categories
+                <ion-item class="item-icon-right  " id="menu-list-item4" ui-sref="menu.categories" menu-close="">Categories
                     <i class="icon ion-ios-pricetag-outline"></i>
                 </ion-item>
             </ion-list>
