DONE completed 80% of basic bible index features TODO 1. implement advanced features 2. search 3. bookmarks/favorites 4. reading history/counts 5. categories

--- a/template/search/book-search-results.html
+++ b/template/search/book-search-results.html
@@ -1,9 +1,25 @@
 <ion-view title="{{vm.bookId}} {{vm.chapId}}" id="page7" class=" " ng-controller="bookSearchResultsCtrl as vm">
     <ion-content padding="true" class="has-header">
-        <ion-list ng-init="vm.getVerses(vm.bookId, vm.chapId)" id="bookSearchResults-list5" class=" " >
-            <ion-item ng-repeat="ver in vm.verses" class="item-icon-right  " id="bookSearchResults-list-item16" ui-sref="menu.verseDetail({book:vm.bookId, chap:vm.chapId, verse:ver.verse})">{{ver.verse}} {{ver.text}}
+        <ion-list ng-init="vm.getVerses(vm.bookId, vm.chapId)"
+        id="bookSearchResults-list5" class=" " >
+        <div class="item-text-wrap">
+            <!-- ui-sref passes parameters to next page-->
+            <ion-item ng-repeat="ver in vm.verses"
+            class="item-icon-right  "
+            id="bookSearchResults-list-item16"
+            ui-sref="menu.verseDetail({book:vm.bookId, chap:vm.chapId, verse:ver.verse})">
+            <div>
+              <!-- TODO put verse and icon on same heading section-->
+              <span>
+                {{ver.verse}}
                 <i class="icon ion-android-arrow-forward"></i>
+              </span>
+              </div>
+              <div>
+             <p>{{ver.text}}</p>
+           </div>
             </ion-item>
+          </div>
 
         </ion-list>
     </ion-content>
