--- a/template/bookIndex/verse-detail.html
+++ b/template/bookIndex/verse-detail.html
@@ -5,8 +5,10 @@
   </button>
   </ion-nav-buttons>
     <ion-content padding="true" class="has-header">
+      {{vm.verseDetail.like}}
         <div class="card item-text-wrap" id="verseDetail-card21">
             <ion-item class="item-icon-right " id="verseDetail-list-item19">
+                <!-- TODO bookID chapID verseNum eg genesis 1 2-->
                 <p>{{vm.verseDetail.text}}</p>
             </ion-item>
         </div>
@@ -19,9 +21,8 @@
                 </select>
             </label>
         </form>
-        <!--
+        <!-- save changes to verse object-->
         <a ui-sref="editVerse({book:vm.bookId, chap:vm.chapId, verse:vm.verse})" id="verseDetail-button6" class=" button button-positive  button-block ">Edit Verse</a>
-        -->
         <button class=" button button-positive  button-block " ng-click="vm.saveVerse()">Save Changes</button>
     </ion-content>
 </ion-view>
