--- a/template/bookIndex/verse-detail.html
+++ b/template/bookIndex/verse-detail.html
@@ -1,9 +1,6 @@
 <ion-modal-view hide-nav-bar="false" title="{{vm.bookId}} {{vm.chapId}} : {{vm.verse}}" id="page6" class=" " ng-controller="verseDetailCtrl as vm">
-  <ion-header-bar title="Edit {{vm.bookId}} {{vm.chapId}} {{vm.verse}}">
-
-</ion-header-bar>
   <ion-nav-bar>
-  <ion-nav-buttons side="secondary">
+  <ion-nav-buttons  title="Edit {{vm.bookId}} {{vm.chapId}} {{vm.verse}}"side="secondary">
     <button>
     <i class="icon ion-android-star" ng-click="vm.verseDetail.like != vm.verseDetail.like"></i>
   </button>
@@ -12,17 +9,19 @@
     <ion-content padding="true" class="has-header">
       {{vm.verseDetail.like}}
         <div class="card item-text-wrap" id="verseDetail-card21">
-            <ion-item class="item-icon-right " id="verseDetail-list-item19">
+            <ion-item class="item " id="verseDetail-list-item19">
                 <!-- TODO bookID chapID verseNum eg genesis 1 2-->
-                <p>{{vm.verseDetail.text}}</p>
+                <!-- <p>{{vm.verseDetail.text}}</p> -->
+                <p>{{vm.verseDetail.vid}}</p>
             </ion-item>
         </div>
         <form id="editVerse-form2" class="list ">
 
             <label class="item item-select " id="editVerse-select3">
                 <span class="input-label">Add to categories</span>
-                <select ng-init="vm.getCategories()" ng-model="vm.selectedCategory" ng-options="cat as cat for cat in vm.categories">
-
+                <select ng-init="vm.getCategories()" ng-model="vm.selectedCategory"
+                ng-options="cat as cat for cat in vm.categories"
+                ng-change="vm.addVerseToCategory()">
                 </select>
             </label>
         </form>
