--- a/template/categories/edit-category.html
+++ b/template/categories/edit-category.html
@@ -7,11 +7,11 @@
                 </select>
             </label>
             <label class="item item-input">
-                <!--TODO show a delete button when category is selected -->
                 <input  type="text" ng-model="vm.category" value="{{vm.category}}">
             </label>
         </form>
-        <a ui-sref="menu.categories" id="editCategory-button15" class=" button button-positive  button-block ">Save</a>
+        <a ui-sref="menu.categories" id="editCategory-button15" class=" button button-positive  button-block ">Save Changes</a>
+        <a ui-sref="menu.categories" id="editCategory-button15" class=" button button-positive  button-block ">Delete Category</a>
         <a ui-sref="menu.categories" id="editCategory-button16" class=" button button-positive  button-block ">Cancel</a>
     </ion-content>
 </ion-view>
