--- a/template/menu.html
+++ b/template/menu.html
@@ -14,17 +14,20 @@
         </ion-header-bar>
         <ion-content padding="false" class="side-menu-left has-header">
             <ion-list id="menu-list3" class=" ">
+                <ion-item class="item-icon-right  " id="menu-list-item1" ui-sref="menu.home" menu-close="">Home
+                    <i class="icon ion-android-home"></i>
+                </ion-item>
                 <ion-item class="item-icon-right  " id="menu-list-item1" ui-sref="menu.bookIndex" menu-close="">Index
-                    <i class="icon ion-home"></i>
+                    <i class="icon ion-ios-book"></i>
                 </ion-item>
                 <ion-item class="item-icon-right  " id="menu-list-item2" ui-sref="menu.search" menu-close="">Search
                     <i class="icon ion-search"></i>
                 </ion-item>
                 <ion-item class="item-icon-right  " id="menu-list-item2" ui-sref="menu.favorites" menu-close="">Favorites
-                    <i class="icon ion-android-star-outline"></i>
+                    <i class="icon ion-heart"></i>
                 </ion-item>
                 <ion-item class="item-icon-right  " id="menu-list-item4" ui-sref="menu.categories" menu-close="">Categories
-                    <i class="icon ion-ios-pricetag-outline"></i>
+                    <i class="icon ion-ios-pricetag"></i>
                 </ion-item>
             </ion-list>
         </ion-content>
