--- a/template/search/search.html
+++ b/template/search/search.html
@@ -3,16 +3,20 @@
         <form id="search-form1" class="list ">
             <label class="item item-select " id="search-select1">
                 <span class="input-label">Book</span>
-                <select ng-init="vm.getBooks()" ng-model="vm.bookId" ng-options="book as book for book in vm.bookList" ng-change="vm.getChaps(vm.bookId)">
+                <select ng-init="vm.getBooks()" ng-model="vm.bookId"
+                ng-options="book as book for book in vm.bookList" ng-change="vm.getChaps(vm.bookId)">
                 </select>
             </label>
             <div class="spacer" style="width: 300px; height: 63px;"></div>
             <label class="item item-select " id="search-select2">
                 <span class="input-label">Chapter</span>
-                <select ng-model="vm.chapId" ng-options="ch as ch.chapId for ch in vm.chapList">
+                <select ng-init="vm.getChaps(vm.bookId)" ng-model="vm.chapId" ng-change="vm.print()"
+                ng-options="ch as ch for ch in vm.chapList">
                 </select>
             </label>
-            <button ng-disabled="(vm.bookId && vm.chapId) ? false: true" ui-sref="menu.bookSearchResults({book:vm.bookId,chap:vm.chapId})" id="search-button8" class=" button button-positive  button-block ">Verse search</button>
+            <button ng-disabled="(vm.bookId && vm.chapId) ? false: true"
+            ui-sref="menu.verseIndex({book:vm.bookId,chap:vm.chapId})" id="search-button8"
+            class=" button button-positive  button-block ">Verse search</button>
 
         </form>
         <form>
