--- a/template/categories/categories.html
+++ b/template/categories/categories.html
@@ -10,7 +10,8 @@
     <ion-content padding="true" class="has-header">
 
         <ion-list id="categories-list4" class=" " ng-init="vm.getCategories()">
-            <ion-item ng-repeat="cat in vm.categories" class="item-icon-right  " id="categories-list-item13" ui-sref="menu.categoryDetail({categoryId:cat})">{{cat}}
+            <ion-item ng-repeat="cat in vm.categories" class="item-icon-right  " id="categories-list-item13"
+            ui-sref="menu.categoryDetail({categoryId:cat})">{{cat}}
                 <i class="icon ion-android-arrow-forward"></i>
             </ion-item>
         </ion-list>
