TODO 1. implement favorites feature 2. implment add category DONE 1. removed ionic modal for verse detail

--- a/template/bookIndex/verse-detail.html
+++ b/template/bookIndex/verse-detail.html
@@ -1,4 +1,4 @@
-<ion-modal-view hide-nav-bar="false" title="{{vm.bookId}} {{vm.chapId}} : {{vm.verse}}" id="page6" class=" " ng-controller="verseDetailCtrl as vm">
+<ion-view  title="{{vm.bookId}} {{vm.chapId}} : {{vm.verse}}" id="page6" class=" " ng-controller="verseDetailCtrl as vm">
   <ion-nav-bar>
   <ion-nav-buttons  title="Edit {{vm.bookId}} {{vm.chapId}} {{vm.verse}}"side="secondary">
     <button>
@@ -24,13 +24,11 @@
                 </select>
             </label>
         </form>
-        <!-- save changes to verse object
-        <a ui-sref="editVerse({book:vm.bookId, chap:vm.chapId, verse:vm.verse})" id="verseDetail-button6" class=" button button-positive  button-block ">Edit Verse</a>
-      -->
         <button class=" button button-positive  button-block "
         ng-click="vm.saveVerse()">Save Changes</button>
-        <!-- redirect back to verse list page-->
-        <a id="editVerse-button9" ng-click="vm.cancel()"
+        <!-- redirect back to verse list page -->
+        <a nav-clear id="editVerse-button9" ng-click="vm.cancel()"
         class=" button button-positive  button-block ">Cancel</a>
+
     </ion-content>
-</ion-modal-view>
+</ion-view>
