--- a/template/favorites/favorites.html
+++ b/template/favorites/favorites.html
@@ -1,4 +1,4 @@
-<ion-view title="favorites" id="page2" class=" " ng-controller="favoritesCtrl as vm">
+<ion-view title="Favorites" id="page2" class=" " ng-controller="favoritesCtrl as vm">
     <ion-content padding="true" class="has-header">
         <ion-list ng-init="vm.getVerses()"
         id="bookSearchResults-list5" class=" " >
