removed nav-clear directive

--- a/template/bookIndex/verse-detail.html
+++ b/template/bookIndex/verse-detail.html
@@ -27,7 +27,7 @@
         <button class=" button button-positive  button-block "
         ng-click="vm.saveVerse()">Save Changes</button>
         <!-- redirect back to verse list page -->
-        <a nav-clear id="editVerse-button9" ng-click="vm.cancel()"
+        <a  id="editVerse-button9" ng-click="vm.cancel()"
         class=" button button-positive  button-block ">Cancel</a>
 
     </ion-content>
