updated verse detail ion nav bar

--- a/template/bookIndex/verse-detail.html
+++ b/template/bookIndex/verse-detail.html
@@ -1,5 +1,5 @@
-<ion-view  title="{{vm.bookId}} {{vm.chapId}} : {{vm.verse}}" id="page6" class=" " ng-controller="verseDetailCtrl as vm">
-  <ion-nav-bar>
+<ion-view  title="Edit Verse" id="page6" class=" " ng-controller="verseDetailCtrl as vm">
+  <ion-nav-bar title="{{vm.bookId}} {{vm.chapId}} : {{vm.verse}}" align-title="left">
   <ion-nav-buttons  title="Edit {{vm.bookId}} {{vm.chapId}} {{vm.verse}}"side="secondary">
     <button>
     <i class="icon ion-android-star" ng-click="vm.verseDetail.like != vm.verseDetail.like"></i>
