added templates to favorite list and verse list

--- a/template/favorites/favorites.html
+++ b/template/favorites/favorites.html
@@ -22,7 +22,7 @@
     </ion-content>
 </ion-view>
 
-<script type="text/template" id="verse-detail.html">
+<script type="text/ng-template" id="verse-detail.html">
 <ion-modal-view ng-controller="verseDetailCtrl as vm">
     <!-- header bar -->
   <ion-nav-bar title="{{vm.verseDetail.bookId}} {{vm.verseDetail.chapId}} : {{vm.verseDetail.verse}}" align-title="center">
